UWP-10824 : Support to modify the author value of annotations programmatically

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -755,6 +755,7 @@
                     <li><a href="/uwp/Pdf-Viewer/How-to/Acquire-number-of-pages-in-the-document-being-displayed">Acquire number of pages in the document being displayed</a></li>
                     <li><a href="/uwp/Pdf-Viewer/How-to/Toggle-the-display-of-the-page-number">Toggle the display of the page number</a></li>
                     <li><a href="/uwp/Pdf-Viewer/How-to/Get-coordinates-of-a-text-in-a-PDF-document">Get coordinates of a text in a PDF document</a></li>
+                    <li><a href="/uwp/Pdf-Viewer/How-to/Check-whether-the-loaded-PDF document-is-edited-or-not">Check whether the loaded PDF document is edited or not</a></li>
                 </ul>
             </li>
         </ul>
