UWP-10751 Revamp the SfImageEditor UWP

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -595,6 +595,9 @@
             <li><a href="/uwp/Image-Editor/ToolbarCustomization">ToolbarCustomization</a></li>
             <li><a href="/uwp/Image-Editor/Zooming">Zooming</a></li>
             <li><a href="/uwp/Image-Editor/Serialization">Serialization</a></li>
+            <li><a href="/uwp/Image-Editor/Z-Ordering">Z-Ordering</a></li>
+            <li><a href="/uwp/Image-Editor/CustomView">Custom View</a></li>
+            <li><a href="/uwp/Image-Editor/ImageFilter">Image Filter</a></li>
         </ul>
     </li>
     <li>
