--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -1031,6 +1031,7 @@
             <li><a href="/uwp/RichTextBox/comment">Comment</a></li>
             <li><a href="/uwp/RichTextBox/import-and-export">Import and Export</a></li>
             <li><a href="/uwp/RichTextBox/printing-contents">Printing Contents</a></li>
+			<li><a href="/uwp/RichTextBox/Automatic-Suggestion">Automatic Suggestion</a></li>
             <li><a href="/uwp/RichTextBox/localization">Localization</a></li>
             <li><a href="/uwp/RichTextBox/radial-menu">Radial Menu</a></li>
             <li><a href="/uwp/RichTextBox/text-prediction">Text Prediction</a></li>
