WPF-54474 Resolved CI failures

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -1017,6 +1017,7 @@
             <li><a href="/uwp/RichTextBox/overview">Overview</a></li>
             <li><a href="/uwp/RichTextBox/getting-started">Getting Started</a></li>
             <li><a href="/uwp/RichTextBox/document-structure">Document Structure</a></li>
+			<li><a href="/uwp/RichTextBox/document-properties">Document Properties</a></li>
             <li><a href="/uwp/RichTextBox/touch">Touch</a></li>
             <li><a href="/uwp/RichTextBox/layout-types">Layout Types</a></li>
             <li><a href="/uwp/RichTextBox/commands">Commands</a></li>
