UWP-10920: Support to perform text search asynchronously UWP-10921: Customize the color of scrollbar thumb of the scrollviewer

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <ul class="treeview">
     <li>
         <a href="/cr/uwp">Class Reference</a>
