--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ul class="treeview">
     <li>
-        <a href="/cr/uwp">Class Reference</a>
+        <a href="/cr/uwp">API Reference</a>
     </li>
     <li>
         <a href="/uwp/overview">Overview</a>
