WPF-58386_UG_document_for_Maps_WPF_multiple_shape

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -646,6 +646,7 @@
             <li><a href="/uwp/Map/Getting-Started">Getting Started</a></li>
             <li><a href="/uwp/Map/Data-Binding">Data Binding</a></li>
             <li><a href="/uwp/Map/Custom-Data-Binding">Custom Data Binding</a></li>
+            <li><a href="/uwp/Map/ShapeType">Shape Types</a></li>
             <li><a href="/uwp/Map/Bubbles">Bubbles</a></li>
             <li><a href="/uwp/Map/Displaying-Items-on-a-Map">Displaying Items on a Map</a></li>
             <li><a href="/uwp/Map/Zooming-and-Panning">Zooming and Panning</a></li>
