XAMARIN-40394_UG_document_for_AllowDefaultDecimalDigits

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -698,6 +698,7 @@
             <li><a href="/uwp/Numeric-TextBox/value-change-mode">Value Change Mode</a></li>
             <li><a href="/uwp/Numeric-TextBox/number-formatting">Number Formatting</a></li>
             <li><a href="/uwp/Numeric-TextBox/culture">Culture</a></li>
+            <li><a href="/uwp/Numeric-TextBox/decimal-digits">Decimal Digits</a></li>
             <li><a href="/uwp/Numeric-TextBox/nullable-value">Nullable Value</a></li>
             <li><a href="/uwp/Numeric-TextBox/parsingmode">ParsingMode</a></li>
             <li><a href="/uwp/Numeric-TextBox/percent-display-mode">Percent Display Mode</a></li>
