WPF-56963 Modified the MD file name

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -1042,12 +1042,12 @@
             <li><a href="/uwp/RichTextBox/hyperlink">Hyperlink</a></li>
 			<li><a href="/uwp/RichTextBox/image">Image</a>
 			    <ul>					
-		            <li><a href="/uwp/RichTextBox/text-wrapping">Text Wrapping</a></li>
+		            <li><a href="/uwp/RichTextBox/text-wrapping-style">Text Wrapping Style</a></li>
                </ul>
 			</li>
 			<li><a href="/uwp/RichTextBox/shapes">Shapes</a>
 			    <ul>					
-		            <li><a href="/uwp/RichTextBox/text-wrapping">Text Wrapping</a></li>
+		            <li><a href="/uwp/RichTextBox/text-wrapping-style">Text Wrapping Style</a></li>
                </ul>
 			</li>
             <li><a href="/uwp/RichTextBox/table">Table</a></li>
