XAMARIN-41973 : Prepared UG document for Unique ID support in SfImageEditor.

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -613,6 +613,7 @@
 				How to
 				<ul>
 					<li><a href="/uwp/Image-Editor/how-to/Clear-all-annotations">Clear all annotations added in image programatically</a></li>
+					<li><a href="/uwp/Image-Editor/how-to/Select-shapes-programmatically">Select the shapes programatically</a></li>
 				</ul>
 			</li>
         </ul>
