EXT-6474- Added Check-for-Updates.md in toc file

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -43,6 +43,7 @@
 				<ul>
 					<li><a href="/uwp/Visual-Studio-Integration/Visual-Studio-Extensions/Create-Project">Create Project</a></li>
 					<li><a href="/uwp/Visual-Studio-Integration/Visual-Studio-Extensions/Troubleshooting">Troubleshooting</a></li>
+					<li><a href="/uwp/Visual-Studio-Integration/Visual-Studio-Extensions/Check-for-Updates">Check for Updates</a></li>
 				</ul>
 			</li>
 			<li><a href="/uwp/Visual-Studio-Integration/NuGet-Packages">NuGet Packages</a></li>		
