UWP-11172 : Concerns addressed

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -700,6 +700,13 @@
             <li><a href="/uwp/Menu/Animation-Support">Animation Support</a></li>
         </ul>
     </li>
+	<li>
+        SfMultiColumnDropDown
+        <ul>
+            <li><a href="/uwp/Multi-Column-DropDown/Overview">Overview</a></li>
+            <li><a href="/uwp/Multi-Column-DropDown/Getting-Started">Getting Started</a></li>            
+        </ul>
+    </li>
     <li>
         SfNumericTextBox
         <ul>
