IN-18058-UG-Documentation-Improvements-UWP

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -7,16 +7,33 @@
         <a href="/uwp/overview">Overview</a>
     </li>
 	<li>
-       Installation and Upgrade
+	   <a href="/uwp/System-Requirement">System Requirements</a>
+	</li>
+	<li>Installation<ul>
+	    <li>Web Installer
 	    <ul>
-		    <li><a href="/uwp/installation-and-upgrade/System-Requirements">System Requirements</a></li>
-			<li><a href="/uwp/installation-and-upgrade/download">Download</a></li>
-		    <li><a href="/uwp/installation-and-upgrade/install-using-the-web-installer">Install using the Web Installer</a></li>			
-		    <li><a href="/uwp/installation-and-upgrade/install-using-the-offline-installer">Install using the Offline Installer</a></li>
-			<li><a href="/uwp/installation-and-upgrade/installation-Errors">Installation Error</a></li>
-			<li><a href="/uwp/installation-and-upgrade/upgrade">Upgrade</a></li>
+			<li>
+				<a href="/uwp/installation/web-installer/how-to-download">How to Download?</a>
+			</li>
+			<li>
+				<a href="/uwp/installation/web-installer/how-to-install">How to Install?</a>
+			</li>
+		</ul>
+	    </li>
+	    <li>Offline Installer
+	    <ul>
+			<li>
+				<a href="/uwp/installation/offline-installer/how-to-download">How to Download?</a>
+			</li>
+			<li>
+				<a href="/uwp/installation/offline-installer/how-to-install">How to Install?</a>
+			</li>
+	    </ul>
+	    </li>
+		<li><a href="/uwp/installation/installation-errors">Installation Errors</a></li>
 		</ul>
 	</li>
+	<li><a href="/uwp/upgrade">Upgrade</a></li>
 	<li>Licensing 
          <ul>          
 			<li><a href="/uwp/licensing/licensing">Overview</a></li> 
