--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -33,12 +33,12 @@
 		<li><a href="/uwp/installation/installation-errors">Installation Errors</a></li>
 		</ul>
 	</li>
-	<li><a href="/uwp/upgrade">Upgrade</a></li>
+	<li><a href="/uwp/how-to-upgrade">How to Upgrade Syncfusion UWP Installer to Latest Version?</a></li>
 	<li>Licensing 
          <ul>          
-			<li><a href="/uwp/licensing/licensing">Overview</a></li> 
-			<li><a href="/uwp/licensing/generating-license-keys">Generating license keys</a></li> 
-			<li><a href="/uwp/licensing/registering-license-keys">Registering license keys</a></li>
+			<li><a href="/uwp/licensing/overview">Overview</a></li> 
+			<li><a href="/uwp/licensing/how-to-generate">How to Generate Syncfusion UWP License Key?</a></li> 
+			<li><a href="/uwp/licensing/how-to-register-in-an-application">How to Register Syncfusion License Key in UWP Application?</a></li>
 			<li><a href="/uwp/licensing/licensing-errors">Licensing Errors</a></li>
             <li>Licensing FAQ
 	        <ul>
