IN-18058-UG-Documentation-Improvements-UWP

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -33,7 +33,13 @@
 		<li><a href="/uwp/installation/installation-errors">Installation Errors</a></li>
 		</ul>
 	</li>
-	<li><a href="/uwp/how-to-upgrade">How to Upgrade Syncfusion UWP Installer to Latest Version?</a></li>
+	<li>Upgrade
+	<ul>
+	   <li>
+	    <a href="/uwp/upgrade/how-to-upgrade">How to Upgrade Syncfusion UWP Installer to Latest Version?</a>
+	   </li>
+	</ul>
+	</li>
 	<li>Licensing 
          <ul>          
 			<li><a href="/uwp/licensing/overview">Overview</a></li> 
