--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -7,21 +7,44 @@
         <a href="/uwp/overview">Overview</a>
     </li>
 	<li>
-       Installation and Upgrade
+	   <a href="/uwp/System-Requirements">System Requirements</a>
+	</li>
+	<li>Installation<ul>
+	    <li>Web Installer
 	    <ul>
-		    <li><a href="/uwp/installation-and-upgrade/System-Requirements">System Requirements</a></li>
-			<li><a href="/uwp/installation-and-upgrade/download">Download</a></li>
-		    <li><a href="/uwp/installation-and-upgrade/install-using-the-web-installer">Install using the Web Installer</a></li>			
-		    <li><a href="/uwp/installation-and-upgrade/install-using-the-offline-installer">Install using the Offline Installer</a></li>
-			<li><a href="/uwp/installation-and-upgrade/installation-Errors">Installation Error</a></li>
-			<li><a href="/uwp/installation-and-upgrade/upgrade">Upgrade</a></li>
+			<li>
+				<a href="/uwp/installation/web-installer/how-to-download">How to Download?</a>
+			</li>
+			<li>
+				<a href="/uwp/installation/web-installer/how-to-install">How to Install?</a>
+			</li>
 		</ul>
+	    </li>
+	    <li>Offline Installer
+	    <ul>
+			<li>
+				<a href="/uwp/installation/offline-installer/how-to-download">How to Download?</a>
+			</li>
+			<li>
+				<a href="/uwp/installation/offline-installer/how-to-install">How to Install?</a>
+			</li>
+	    </ul>
+	    </li>
+		<li><a href="/uwp/installation/installation-errors">Installation Errors</a></li>
+		</ul>
+	</li>
+	<li>Upgrade
+	<ul>
+	   <li>
+	    <a href="/uwp/upgrade/how-to-upgrade">How to Upgrade Syncfusion UWP Installer to Latest Version?</a>
+	   </li>
+	</ul>
 	</li>
 	<li>Licensing 
          <ul>          
-			<li><a href="/uwp/licensing/licensing">Overview</a></li> 
-			<li><a href="/uwp/licensing/generating-license-keys">Generating license keys</a></li> 
-			<li><a href="/uwp/licensing/registering-license-keys">Registering license keys</a></li>
+			<li><a href="/uwp/licensing/overview">Overview</a></li> 
+			<li><a href="/uwp/licensing/how-to-generate">How to Generate Syncfusion UWP License Key?</a></li> 
+			<li><a href="/uwp/licensing/how-to-register-in-an-application">How to Register Syncfusion License Key in UWP Application?</a></li>
 			<li><a href="/uwp/licensing/licensing-errors">Licensing Errors</a></li>
             <li>Licensing FAQ
 	        <ul>
