--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -65,7 +65,8 @@
 			<li><a href="/uwp/Visual-Studio-Integration/Create-Project">Create Project</a></li>
 			<li><a href="/uwp/Visual-Studio-Integration/Troubleshooting">Troubleshooting</a></li>
 			<li><a href="/uwp/Visual-Studio-Integration/Check-for-Updates">Check for Updates</a></li>
-			<li><a href="/uwp/Visual-Studio-Integration/NuGet-Packages">NuGet Packages</a></li>		
+			<li><a href="/uwp/Visual-Studio-Integration/Syncfusion-Notifications">Notifications</a></li>
+			<li><a href="/uwp/Visual-Studio-Integration/NuGet-Packages">NuGet Packages</a></li>
 		</ul>
     </li>
     <li><a href="/uwp/DotNET-Framework-support-History">.NET Framework History</a>
