--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -478,7 +478,7 @@
         </ul>
     </li>
     <li>
-        DocIO
+        Word Library (DocIO)
         <ul>
             <li>
                 <a href="/file-formats/DocIO/Overview">Overview</a>
@@ -1262,7 +1262,7 @@
         </ul>
     </li>
     <li>
-        Presentation
+        PowerPoint Library (Presentation)
         <ul>
             <li>
                 <a href="/file-formats/Presentation/Overview">Overview</a>
