855498: Need to add UG Documentation for freetext annotation and missing modules on UWP platform.

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -705,9 +705,9 @@
 			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Working-with-ink-annotation">Working with ink annotations</a></li>
 			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Working-with-popup-annotation">Working with popup annotations</a></li>
 			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Working-with-shape-annotation">Working with shape annotations</a></li>
-			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Working-with-free-text-annotation">Working with free text annotation</a></li>
-			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Working-with-free-text-callout-annotation">Working with free text callout annotation</a></li>
-			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Working-with-custom-stamp-annotation">Working with custom stamp annotation</a></li>
+			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Working-with-free-text-annotation">Working with free text annotations</a></li>
+			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Working-with-free-text-callout-annotation">Working with free text callout annotations</a></li>
+			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Working-with-custom-stamp-annotation">Working with custom stamp annotations</a></li>
 			<li><a href="/uwp/Pdf-Viewer/Concepts-and-Features/Exporting-pages-as-image">Exporting pages as images</a></li>
 			<li>
                 Custom toolbar
