183389 - UG Documentation For Syncfusion License Key Validation - dev

--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -45,6 +45,7 @@
 			<li><a href="/uwp/licensing/overview">Overview</a></li> 
 			<li><a href="/uwp/licensing/how-to-generate">How to Generate Syncfusion UWP License Key?</a></li> 
 			<li><a href="/uwp/licensing/how-to-register-in-an-application">How to Register Syncfusion License Key in UWP Application?</a></li>
+			<li><a href="/uwp/licensing/ci-license-validation">How to Validate Syncfusion License Key In CI Services?</a></li>
 			<li><a href="/uwp/licensing/licensing-errors">Licensing Errors</a></li>
             <li>Licensing FAQ
 	        <ul>
