--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -1198,7 +1198,7 @@
 			<li><a href="/uwp/TreeGrid/Clipboard-Operations">Clipboard Operations</a></li>
 			<li><a href="/uwp/TreeGrid/ToolTip">ToolTip</a></li>
 			<li><a href="/uwp/TreeGrid/Conditional-Styling">Conditional Styling</a></li>
-			<!--li><a href="/uwp/TreeGrid/Row-Drag-And-Drop">Row Drag and Drop</a></li-->
+			<!--<li><a href="/uwp/TreeGrid/Row-Drag-And-Drop">Row Drag and Drop</a></li>-->
                 <li><a href="/uwp/TreeGrid/Rows">Rows</a></li>
                 <li><a href="/uwp/TreeGrid/Localization">Localization</a></li>
 			<li><a href="/uwp/TreeGrid/Node-CheckBox">Node CheckBox</a></li>
