--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -988,6 +988,7 @@
             <li><a href="/uwp/Rating/Appearance-and-Styling">Appearance and Styling</a></li>
         </ul>
     </li>
+	<li>SfRichTextBoxAdv</li>
     <li>
         SfRibbon(Touch Ribbon)
         <ul>
