--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -9,6 +9,12 @@
 	<li>
 	   <a href="/uwp/System-Requirements">System Requirements</a>
 	</li>
+    <li>AI Coding Assistant
+		<ul>
+			<li><a href="/uwp/ai-coding-assistant/overview">Overview</a></li>
+			<li><a href="/uwp/ai-coding-assistant/mcp-server">MCP Server</a></li>
+		</ul> 
+	</li>
 	<li>Installation<ul>
 	    <li>Web Installer
 	    <ul>
