--- a/uwp-toc.html
+++ b/uwp-toc.html
@@ -1250,7 +1250,7 @@
 			<li>2025 Volume 3  - v31.*
 				<ul>
 					<li> Weekly Nuget Release 
-						<ul><li><a href="/uwp/release-notes/v31.2.16">v31.2.16</a></li>
+						<ul><li><a href="/uwp/release-notes/v31.2.18">v31.2.18</a></li><ul><li><a href="/uwp/release-notes/v31.2.16">v31.2.16</a></li>
 						<li><a href="/uwp/release-notes/v31.2.15">v31.2.15</a></li>
 						<li><a href="/uwp/release-notes/v31.2.10">v31.2.10</a></li>
 						<li><a href="/uwp/release-notes/v31.2.5">v31.2.5</a></li>
